bessere formulierung tw

--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -77,7 +77,7 @@
 
 % Einleitung - viele semantische Daten, diese sind sehr nützlich
 
-Im Laufe der letzten Jahre wurden immer mehr semantische Daten veröffentlicht, sowohl in Community-Projekten wie der DBpedia\footnote{\url{http://dbpedia.org}} als auch als Teil der Open Data bzw. Open Government Bewegung, wie z.\,B. data.gov.uk\footnote{\url{http://data.gov.uk/data/search?q=rdf}}. Diese Datenkataloge können von großem Nutzen für jeden sein. Die DBpedia ist eine maschinenlesbare Version der Wikipedia, mit ihr können mit Hilfe der Abfragesprache SPARQL automatisch Fragen beantwortet werden, deren manuelle Recherche zu aufwändig wäre. In data.gov.uk finden sich Informationen, die für alle Steuerzahler relevant sein können, wie z.\,B. Organigramme und Gehälter von Regierungsorganisationen.
+Im Laufe der letzten Jahre wurden immer mehr semantische Daten veröffentlicht, sowohl in Community-Projekten wie der DBpedia\footnote{\url{http://dbpedia.org}} als auch als Teil der Open Data bzw. Open Government Bewegung, wie z.\,B. data.gov.uk\footnote{\url{http://data.gov.uk/data/search?q=rdf}}. Diese Datenkataloge können von großem Nutzen für jeden sein. Die DBpedia ist eine maschinenlesbare Version der Wikipedia, mit ihr können mit Hilfe der Abfragesprache SPARQL automatisch Fragen beantwortet werden, deren manuelle Recherche zu aufwändig wäre. In data.gov.uk finden sich Informationen, die für alle Steuerzahler im Vereinigten Königreich relevant sein können, wie z.\,B. Organigramme und Gehälter von Regierungsorganisationen.
 
 % ###################################################
 \section{Motivation}
@@ -91,18 +91,11 @@ Jedoch ist es sehr schwierig, das Wissen in den Datenkatalogen aufzunehmen. Wird
 
 % expertenwissen visualisierung
 
-Selbst wenn ein Visualisierungstool für semantische Daten existierte, welches verschiedene Arten von Diagrammen unterstützte, würde ein Anwender das Wissen in den Datenkatalogen nicht angemessen vermittelt bekommen. Die Konfiguration von Diagrammen setzt Expertenwissen im Bereich der Informationsvisualisierung voraus, die in den meisten Fällen nicht gegeben ist. Wie viele Farben sind in einem Diagramm angemessen? Wie viele Balken für ein Balkendiagramm? Welche Informationen werden am Besten als Farbe kodiert, welche als Größe oder Position?
+Selbst wenn ein Visualisierungstool für semantische Daten existierte, welches verschiedene Arten von Diagrammen unterstützt, würde ein Anwender das Wissen in den Datenkatalogen nicht angemessen vermittelt bekommen. Die Konfiguration von Diagrammen setzt Expertenwissen im Bereich der Informationsvisualisierung voraus, die in den meisten Fällen nicht gegeben ist. Wie viele Farben können in einem Diagramm unterschieden werden? Wie viele Balken sind zu viele für ein Balkendiagramm? Welche Informationen werden am Besten als Farbe kodiert, welche als Größe oder Position?
 
 % vizboard to the rescue
 
-Vizboard to the rescue! Beschreibung von VIzboard. Problem dann im nächsten abschnitt
-
-% ###################################################
-\section{Problemstellung und Zielsetzung}
-\label{section:einleitung:problemstellung}
-
-% Hier wird quasi der Vizboard Workflow umrissen
-% und erklärt, wo das eigentliche Problem liegt, nämlich im Information Overload beim letzten Schritt
+Diese Probleme zu lösen ist das Ziel des Forschungsprojekts VizBoard. Es setzt einen Prozess aus fünf Schritten ein (Abbildung~\ref{figure:vizboard_workflow}): Zuerst wird ein Datensatz hochgeladen (1), danach Konzepte zur Visualisierung ausgewählt (3), Daten im Detail und Visualisierungen gewählt (5), Visualisierungen konfiguriert (7) und schließlich werden die Visualisierungen angezeigt (9).
 
 \begin{figure}[htbp]
 	\centering
@@ -110,6 +103,16 @@ Vizboard to the rescue! Beschreibung von VIzboard. Problem dann im nächsten abs
 	\caption{VizBoard Workflow}
 	\label{figure:vizboard_workflow}
 \end{figure}
+
+% ###################################################
+\section{Problemstellung und Zielsetzung}
+\label{section:einleitung:problemstellung}
+
+% problem liegt im letzten teil
+
+Im letzten Schritt 
+
+
 
 % ###################################################
 \section{Aufbau der Arbeit}
